--- a/algos.yaml
+++ b/algos.yaml
@@ -70,6 +70,18 @@ float:
         base:
           args: [[100, 400, 1024, 4096, 8192, 16384], [4, 5, 8], [48, 64, 128]]
           query-args: [[5, 10, 50, 100, 200], [0, 2.0, 4.0], ["uint8", "float32", "float16"], ["float32", "float16"]]
+    raft-ivfflat:
+      disabled: true
+      docker-tag: ann-benchmarks-raft
+      docker-runtime: "nvidia"
+      docker-env: ["DISABLE_JUPYTER=true"]
+      module: ann_benchmarks.algorithms.raft_ivfflat
+      constructor: RAFTIVFFlat
+      base-args: ["@metric"]
+      run-groups:
+        base:
+          args: [[100, 400, 1024, 4096, 8192, 16384]]
+          query-args: [[5, 10, 50, 100, 200], ["float32", "float16"]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
