--- a/algos.yaml
+++ b/algos.yaml
@@ -81,7 +81,7 @@ float:
       run-groups:
         base:
           args: [[100, 400, 1024, 4096, 8192, 16384]]
-          query-args: [[5, 10, 50, 100, 200], ["float32", "float16"]]
+          query-args: [[5, 10, 50, 100, 200]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
