--- a/install/Dockerfile.pynndescent
+++ b/install/Dockerfile.pynndescent
@@ -1,4 +1,4 @@
 FROM ann-benchmarks
 
-RUN pip3 install numpy pynndescent>=0.5
+RUN pip3 install numpy==1.20.0 pynndescent>=0.5
 RUN python3 -c 'import pynndescent'
