Fix Faiss CI failures

--- a/install/Dockerfile.faiss
+++ b/install/Dockerfile.faiss
@@ -1,7 +1,7 @@
 FROM ann-benchmarks
 
 RUN apt update && apt install -y wget
-RUN wget https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh
+RUN wget -q https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh
 RUN bash Anaconda3-2020.11-Linux-x86_64.sh -b
 
 ENV PATH /root/anaconda3/bin:$PATH
