--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -65,6 +65,9 @@ jobs:
     env:
       LIBRARY: ${{ matrix.library }}
       DATASET: ${{ matrix.dataset }}
+      RUN_OPTIONS: ${{ matrix.library != 'faiss' && '--run-disabled' || '' }}
+
+    name: ${{ matrix.library }} (${{ matrix.dataset }})
 
     steps:
     - uses: actions/checkout@v3 # Pull the repository
@@ -80,8 +83,8 @@ jobs:
     
     - name: Run the benchmark
       run: |
-        python3 run.py --docker-tag ann-benchmarks-${LIBRARY} --max-n-algorithms 3 --runs 2 --dataset $DATASET --run-disabled --timeout 300
-        python3 run.py --docker-tag ann-benchmarks-${LIBRARY} --max-n-algorithms 3 --runs 2 --dataset $DATASET --run-disabled --batch --timeout 300
+        python3 run.py --docker-tag ann-benchmarks-${LIBRARY} --max-n-algorithms 3 --runs 2 --dataset $DATASET $RUN_OPTIONS --timeout 300
+        python3 run.py --docker-tag ann-benchmarks-${LIBRARY} --max-n-algorithms 3 --runs 2 --dataset $DATASET $RUN_OPTIONS --batch --timeout 300
         sudo chmod -R 777 results/
         python3 plot.py --dataset $DATASET --output plot.png
         python3 plot.py --dataset $DATASET --output plot-batch.png --batch
