--- a/install/Dockerfile.raft
+++ b/install/Dockerfile.raft
@@ -1,12 +1,9 @@
-FROM nvcr.io/nvidia/rapidsai/rapidsai-core:23.04-cuda11.8-runtime-ubuntu22.04-py3.10 as raft
+FROM nvcr.io/nvidia/rapidsai/rapidsai-core:23.04-cuda11.8-runtime-ubuntu22.04-py3.10
 
 ENV DEBIAN_FRONTEND noninteractive
 
-FROM ann-benchmarks
-RUN python3 -m pip install -r requirements.txt
-
-FROM raft
-RUN python3 -c 'from pylibraft.neighbors import ivf_pq;'
+RUN pip install h5py psutil pyyaml matplotlib
+RUN pip install docker ansicolors
 
 COPY --from=ann-benchmarks /home/app /home/app
 WORKDIR /home/app
