inital adding of chroma
Signed-off-by: Jess Frazelle <github@jessfraz.com>

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -29,6 +29,7 @@ jobs:
         dataset: [random-xs-20-angular]
         library:
           - annoy
+          - chroma
           - diskann
           - dolphinn
           - elasticsearch
@@ -59,7 +60,7 @@ jobs:
           - vespa
           - weaviate
         include:
-          - library: pynndescent 
+          - library: pynndescent
             dataset: random-xs-16-hamming
           - library: datasketch
             dataset: random-s-jaccard
@@ -83,7 +84,7 @@ jobs:
 
     - name: Build Library Docker Image
       run: python3 install.py
-    
+
     - name: Run the benchmark
       run: |
         python3 run.py --docker-tag ann-benchmarks-${LIBRARY} --max-n-algorithms 3 --runs 2 --dataset $DATASET --run-disabled --timeout 300
