--- a/algos.yaml
+++ b/algos.yaml
@@ -225,16 +225,13 @@ float:
         # https://github.com/erikbern/ann-benchmarks/pull/391#issuecomment-1518093405
         tinyknn_1:
           args: [ 1, [1, 2, 3] ]
-          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80,
-                        88, 106, 126, 148, 172, 198, 256]]
+          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80, 100]]
         tinyknn_2:
           args: [ 2, [3, 4] ]
-          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80,
-                        88, 106, 126, 148, 172, 198, 256]]
+          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80, 100]]
         tinyknn_3:
           args: [ 3, [5] ]
-          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80,
-                        88, 106, 126, 148, 172, 198, 256]]
+          query-args: [[1, 2, 3, 4, 6, 8, 10, 13, 16, 20, 24, 28, 33, 38, 44, 50, 57, 64, 72, 80, 100]]
     Milvus(Knowhere):
       docker-tag: ann-benchmarks-milvus
       module: ann_benchmarks.algorithms.milvus
