Add: USearch implementation

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -54,6 +54,7 @@ jobs:
           - sklearn
           - sptag
           - tinyknn
+          - usearch
           - vald
           - vearch
           - vespa
