--- a/ann_benchmarks/algorithms/surreal_mtree/config.yml
+++ b/ann_benchmarks/algorithms/surreal_mtree/config.yml
@@ -7,11 +7,5 @@ float:
     module: ann_benchmarks.algorithms.surreal_mtree
     name: surreal_mtree
     run_groups:
-      M-16:
-        arg_groups: [{M: 16, efConstruction: 200}]
-        args: {}
-        query_args: [[10, 20, 40, 80, 120, 200, 400, 800]]
-      M-24:
-        arg_groups: [{M: 24, efConstruction: 200}]
-        args: {}
-        query_args: [[10, 20, 40, 80, 120, 200, 400, 800]]
+      default:
+        args: [[10, 20, 40, 100, 200, 400, 1000]]
