--- a/ann_benchmarks/algorithms/surreal_hnsw/config.yml
+++ b/ann_benchmarks/algorithms/surreal_hnsw/config.yml
@@ -3,7 +3,7 @@ float:
     - base_args: ['@metric']
       constructor: SurrealHnsw
       disabled: false
-      docker_tag: benchmarks-surreal_hnsw
+      docker_tag: ann-benchmarks-surreal_hnsw
       module: ann_benchmarks.algorithms.surreal_hnsw
       name: surreal_hnsw
       run_groups:
