From Local Repro (Working ANN Tests)

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -29,6 +29,7 @@ jobs:
       matrix:
         dataset: [random-xs-20-angular]
         library:
+          - aerospike
           - annoy
           - balltree
           - bruteforce
