--- a/ann_benchmarks/algorithms/surreal_hnsw/config.yml
+++ b/ann_benchmarks/algorithms/surreal_hnsw/config.yml
@@ -8,6 +8,6 @@ float:
       name: surreal_hnsw
       run_groups:
         M-24-500:
-          arg_groups: [{M: 24, efConstruction: 500}]
+          arg_groups: [{M: 24, efConstruction: 150}]
           args: {}
-          query_args: [[10, 20, 40, 80, 100, 250, 500]]
+          query_args: [[5, 10, 20, 40, 80]]
