--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -57,6 +57,7 @@ jobs:
           - parlayann
           - pg_embedding
           - pgvector
+          - pgvectorscale
           - pgvecto_rs
           - pynndescent
           - redisearch
