--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -70,6 +70,7 @@ jobs:
           - vearch
           - vespa
           - voyager
+          - vsag
           - weaviate
         include:
           - library: pynndescent
