Upgrade to Python 3.12

--- a/ann_benchmarks/algorithms/redisearch/Dockerfile
+++ b/ann_benchmarks/algorithms/redisearch/Dockerfile
@@ -2,8 +2,9 @@ FROM redislabs/redisearch as redisearch
 FROM ann-benchmarks
 
 # Install Redis
-RUN apt-get update && apt-get install -y curl lsb-core
+RUN apt-get install lsb-release curl gpg
 RUN curl -fsSL https://packages.redis.io/gpg | gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg
+RUN chmod 644 /usr/share/keyrings/redis-archive-keyring.gpg
 RUN echo "deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/redis.list
 RUN apt-get update
 RUN apt-get install -y redis
