Fix a few other algos

--- a/ann_benchmarks/algorithms/scann/Dockerfile
+++ b/ann_benchmarks/algorithms/scann/Dockerfile
@@ -1,5 +1,4 @@
 FROM ann-benchmarks
 
-RUN pip3 install --upgrade pip
-RUN pip3 install scann
-RUN python3 -c 'import scann'
+RUN pip install scann
+RUN python -c 'import scann'
