--- a/ann_benchmarks/algorithms/voyager/Dockerfile
+++ b/ann_benchmarks/algorithms/voyager/Dockerfile
@@ -1,7 +1,6 @@
 FROM ann-benchmarks
 
-RUN apt-get install -y python-setuptools python-pip
-RUN pip3 install voyager
+RUN pip install voyager
 
-RUN python3 -c 'import voyager'
+RUN python -c 'import voyager'
 
