Create module for MariaDB
MariaDB supports Vector now. Add new module for benchmark against MariaDB
11.8 database server.

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -46,6 +46,7 @@ jobs:
           - kdtree
           - kgn
           - luceneknn
+          - mariadb
           - milvus
           - mrpt
           - nndescent
