--- a/ann_benchmarks/algorithms/kgn/config.yml
+++ b/ann_benchmarks/algorithms/kgn/config.yml
@@ -9,15 +9,9 @@ float:
       run_groups:
         Kgn:
             args: 
-              L: 100
-              R: 50
-              index_type : "KGN"
-              optimize : true
-              batch : false
-              kmeans_ep: 0
-              kmeans_type: 0
-              level: [1,2]
-            query_args: [[5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100, 105, 110, 115]]
+              R: 160
+              level: 2
+            query_args: [[10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100, 105, 110, 120, 140, 150, 160, 180, 200, 300, 500]]
   angular:
     - base_args: ['@metric','@dimension']
       constructor: Kgn
@@ -28,12 +22,6 @@ float:
       run_groups:
         Kgn:
             args: 
-              L: 500
-              R: 96
-              index_type : "NSG"
-              optimize : true
-              batch : false
-              kmeans_ep: 0
-              kmeans_type: 0
+              R: [128,160]
               level: [1,2]
             query_args: [[10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100, 105, 110, 115, 200, 300, 400, 500]]
