adapt openGauss for annbenchmark

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -72,6 +72,7 @@ jobs:
           - voyager
           - vsag
           - weaviate
+          - openGauss
         include:
           - library: pynndescent
             dataset: random-xs-16-hamming
